--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="label_button_save">Guardar</string>
     <string name="label_button_explorer">Listar Ficheros</string>
     <string name="label_button_show_content">Mostrar contenido</string>
+    <string name="preference_file_key">ut_02_file_key</string>
+    <string name="encrypted_preference_file_key">ut_02_encripted_file_key</string>
 </resources>
