--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="action_file">Repositorio fichero</string>
     <string name="action_mem">Repositorio memoria</string>
     <string name="action_sharpref">Repositorio SharedPreferences</string>
+    <string name="preference_file_exercise02">ut02_exercise02</string>
 </resources>
