--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="action_mem">Repositorio memoria</string>
     <string name="action_sharpref">Repositorio SharedPreferences</string>
     <string name="preference_file_exercise02">ut02_exercise02</string>
+    <string name="preference_file_exercise04">ut02_exercise04</string>
     <string name="ut03_preference_file_exercise03">ut03_exercise03</string>
 </resources>
